--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SECRET_KEY=django-insecure-6grgh9#yep5i=eicwahjw!m$@2gjqmj3eo@1#y(tv-o0o@n204
 DEBUG=True
 
 DB_ENGINE=django.db.backends.postgresql
-DB_NAME=milliy_platform
+DB_NAME=platforma
 DB_USER=postgres
 DB_PASSWORD=123456
 DB_HOST=localhost
